[macmini] update for early april 2026